syntax = "proto3";
package ysip.ysip;

// this line is used by starport scaffolding # proto/tx/import

option go_package = "ysip/x/ysip/types";

// Msg defines the Msg service.
service Msg {
  rpc MintCoin(MsgMintCoin) returns (MsgMintCoinResponse);
  rpc BurnCoin(MsgBurnCoin) returns (MsgBurnCoinResponse);
  // this line is used by starport scaffolding # proto/tx/rpc
}

message MsgMintCoin {
  string creator = 1;
  string amount = 2;
  string owner = 3;
}

message MsgMintCoinResponse {
  Result result = 1;
}

enum Result {
  SUCCESS = 0;
  FAIL = 1;
}

message MsgBurnCoin {
  string creator = 1;
  string amount = 2;
  string owner = 3;
}

message MsgBurnCoinResponse {
  Result result = 1;
}

// this line is used by starport scaffolding # proto/tx/message
